[tool.poetry]
name = "which-key"
version = "0.1.0"
description = ""
authors = ["Bendik Samseth <b.samseth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
pydantic = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.910"
types-toml = "^0.10.1"

[tool.poetry.scripts]
which-key = "which_key.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
